dataset1235/2025-2/2868285114/users/214715729/executions/3071719669_2249045874.log
== SUBMISSION (2025-08-28 22:39:46)
-- CODE: 
import math

lado = float(input())
apotema = lado / (2 * math.tan(math.pi / 8))
area = 4 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:26)
-- CODE: 
from math import *

lado = float(input())
apotema = lado / (2 * math.tan(math.pi / 8))
area = 4 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * math.tan(math.pi / 8))
                          ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
